# mpc_poc_multi

./: .env.example  .gitignore  README.md  main.py  main_web.py  pyproject.toml  requirements.txt  test_server.py  trial.py
config/: __init__.py  auth_config.py  server_config.py  settings.py
host/: __init__.py  auth_middleware.py  context_manager.py  health_checker.py  mcp_host.py  ollama_client.py  server_discovery.py  session_manager.py
servers/neo4j_graph/: __init__.py  db_client.py  graph_server.json  graph_server.py  queries.py  schemas.py  server.json  server_neo4j.py
servers/weather_ita/: __init__.py  server.json  server_it.py  wita_api_client.py  wita_schemas.py
servers/weather_us/: __init__.py  server.json  server.py  server_us.py  wus_api_client.py  wus_schemas.py
shared/: __init__.py  auth.py  logging_config.py  utils.py
tests/: test_fix.py  test_ollama.py
