[project]
name = "mcp-nulti-server-client"
version = "0.1.0"
description = "MCP Multi-Server/Multi-Client Implementation with local Ollama Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "neo4j>=5.14.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "ollama>=0.6.1",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.12.5"
starlette = "0.50.0"
mcp = "1.22.0"
httpx = "0.28.1"
pydantic_settings = "2.12.0"
ollama = "0.6.1"
cryptography = "46.0.3"
structlog = "25.5.0"
neo4j = "6.0.3"
passlib = "1.7.4"
python-dotenv = "1.2.1"
uvicorn = "0.38.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
