[project]
name = "mpc_poc_multi"
version = "0.1.0"
description = "MPC package with ReAct, Ollama local LLM, MPC host, clients and servers for meteo forecasts in italy and US"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.11.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.1.1"
]

[tool.poetry]
name = "mpc_poc_multi"
version = "0.1.0"
description = "MPC package with ReAct, Ollama local LLM, MPC host, clients and servers for meteo forecasts in italy and US"
authors = ["femas86 <federico.mastrorilli@activadigital.it>"]
readme = "README.md"

[tool.poetry.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
