[project]
name = "mpc_poc_multi"
version = "0.1.0"
description = "MPC package with ReAct, Ollama local LLM, MPC host, clients and servers for meteo forecasts in italy and US, Neo4j GraphDB semantic querying and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.11.0",
    "ollama>=0.6.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.1.1",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "cryptography>=41.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "structlog>=24.1.0",
    "neo4j>=5.14.0",
    "gradio>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["config", 
"host",
"servers",
"shared",
"tests",
"main.py",
"main_web.py"]

